--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -90,6 +90,7 @@
   "navigation": {
     "home": "首页",
     "dashboard": "仪表盘",
+    "converter": "文档转换",
     "about": "关于",
     "contact": "联系我们",
     "profile": "个人资料",
@@ -125,6 +126,39 @@
     "uploadFailed": "文件上传失败",
     "downloadSuccess": "文件下载成功",
     "downloadFailed": "文件下载失败"
+  },
+  "converter": {
+    "description": "上传您的简历，我们将其转换为符合 Cognizant 简历模板的格式。",
+    "selectFiles": "选择文件",
+    "dropFiles": "将文件拖拽到这里",
+    "clearAll": "清空所有",
+    "selectedFiles": "已选择的文件",
+    "filesAdded": "成功添加 {count} 个文件",
+    "fileRemoved": "文件 '{name}' 已移除",
+    "allFilesCleared": "所有文件已清空",
+    "duplicateFiles": "部分文件被跳过（重复文件）",
+    "processing": "正在处理文件...",
+    "processingError": "处理文件时发生错误",
+    "uploadZone": {
+      "description_1": "拖拽 docx/pdf 文件到这里，或者",
+      "description_2": "点击上传",
+      "instruction": "最多10个文件，每个5MB。",
+      "hint": "或点击下方按钮选择文件"
+    },
+    "dragHere": "拖拽文件到这里上传",
+    "uploadAll": "上传所有文件",
+    "converterInfo": {
+      "title": "转换说明",
+      "supportedFormats": "支持的格式：DOCX、PDF",
+      "maxSize": "最大文件大小：{size}",
+      "dragDrop": "支持拖拽上传",
+      "todo": "注意：真正的转换功能尚未实现，目前仅记录文件路径"
+    },
+    "errors": {
+      "fileTooLarge": "文件 '{name}' 过大，最大大小为 {size}",
+      "invalidType": "文件 '{name}' 类型无效，仅支持 DOCX 和 PDF 文件",
+      "uploadLimitExceeded": "上传文件超出限制，最多允许10个文件。"
+    }
   },
   "error": {
     "404": "页面未找到",
