--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -87,6 +87,12 @@
     "profile": "Profile",
     "settings": "Settings",
     "preferences": "Preferences",
+    "convertTo": "Convert to",
+    "template": "Template",
+    "english": "English",
+    "chinese": "Chinese",
+    "languagePreferenceSaved": "Language preference saved",
+    "templatePreferenceSaved": "Template preference saved",
     "account": "Account",
     "personalInfo": "Personal Information",
     "changePassword": "Change Password",
