--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -87,6 +87,12 @@
     "profile": "个人资料",
     "settings": "设置",
     "preferences": "偏好设置",
+    "convertTo": "转换为",
+    "template": "模板",
+    "english": "英语",
+    "chinese": "中文",
+    "languagePreferenceSaved": "语言偏好已保存",
+    "templatePreferenceSaved": "模板偏好已保存",
     "account": "账户",
     "personalInfo": "个人信息",
     "changePassword": "修改密码",
