修复国际化在生产环境中的白屏问题，优化 Vue I18n 配置并移除自动导入中的 vue-i18n，新增安全的国际化工具函数 useSafeI18n，更新 README.md 使用说明。

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -73,7 +73,7 @@
     "loggingIn": "Logging in...",
     "emailPlaceholder": "Enter your email",
     "verificationCodePlaceholder": "Enter verification code",
-    "invalidEmailDomain": "Please use @cognizant.com email"
+    "invalidEmailDomain": "Please use {'@'}cognizant.com email"
   },
   "dashboard": {
     "title": "Dashboard",
